[tool.poetry]
name = "fitburst"
version = "0.1.0"
description = "fitburst - A Codebase for Direct Modeling of Radio Dynamic Spectra"
authors = ["Emmanuel Fonseca <emmanuel.fonseca@mail.wvu.edu>"]
license = "MIT"
readme = "README.md"
keywords = ["frb", "radio burst", "pulsar", "dispersion measure"]
homepage = "https://github.com/CHIMEFRB/fitburst"
documentation = "https://chimefrb.github.io/fitburst/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CHIMEFRB/fitburst/issues"
"Source" = "https://github.com/CHIMEFRB/fitburst"

[tool.poetry.dependencies]
python = "^3.8"
astropy = ">=4.0"
matplotlib = ">=3.1"
numpy = ">=1.17"
pytz = "^2023.3"
pyyaml = ">=5.3"
requests = ">=2.0"
scipy = ">=1.5"


[tool.poetry.group.chimefrb.dependencies]
chime-frb-api = "^3.2"
cfod = {git = "https://github.com/chime-frb-open-data/chime-frb-open-data.git"}

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
