[metadata]
name = fitburst
version = 0.0
description = "fitburst - A Codebase for Direct Modeling of Radio Dynamic Spectra"

author = Emmanuel Fonseca
author_email = emmanuel.fonseca@mail.wvu.edu
keywords = fast radio burst, frb, pulsar, dispersion measure
maintainer = Emmanuel Fonseca
maintainer_email = emmanuel.fonseca@mail.wvu.edu
url = https://github.com/CHIMEFRB/fitburst
project_urls:
    Source = https://github.com/CHIMEFRB/fitburst
    Tracker = https://github.com/CHIMEFRB/fitburst/issues

[options]
python_requires = >=3.7
install_requires = 
    astropy>=4.0
    numpy>=1.17
    matplotlib>=3.1
    mkdocs>=1.1
    PyYAML>=5.3
    scipy>=1.6
packages = find:
