[metadata]
name = fitburst
version = 0.0
description = "fitburst - A Codebase for Direct Modeling of Radio Dynamic Spectra"

author = Emmanuel Fonseca
author_email = emmanuel.fonseca@mail.wvu.edu
keywords = fast radio burst, frb, pulsar, dispersion measure
maintainer = Emmanuel Fonseca
maintainer_email = emmanuel.fonseca@mail.wvu.edu
url = https://github.com/CHIMEFRB/fitburst
project_urls:
    Source = https://github.com/CHIMEFRB/fitburst
    Tracker = https://github.com/CHIMEFRB/fitburst/issues

[options]
python_requires = >=3.6
include_package_data = True
install_requires = 
    astropy>=4.0
    cfod
    matplotlib>=3.1
    mkdocs>=1.1
    numpy>=1.17
    pytz
    PyYAML>=5.3
    requests
    scipy>=1.5
packages = find:

[options.package_data]
* = *.yaml

[options.extras_require]
chimefrb =
    chime_frb_api @ git+ssh://git@github.com/CHIMEFRB/frb-api
    cfod @ git+ssh://git@github.com/chime-frb-open-data/chime-frb-open-data
